--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://valorjj.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: valorjj # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -88,7 +88,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
